# pycooldown

./: .gitignore  Cargo.toml  build.py  pyproject.toml
pycooldown/: sliding_window.py
pycooldown/_rust_bindings/: __init__.pyi
pycooldown_rs/: lib.rs
